[gd_scene load_steps=29 format=3 uid="uid://clineulma6iem"]

[ext_resource type="Script" uid="uid://dnyrf7v3xk5pw" path="res://guys/mossman/mossman.gd" id="1_fvd03"]
[ext_resource type="PackedScene" uid="uid://basbh2e8jl5cf" path="res://components/enemy_color_mod.tscn" id="3_ehjdp"]
[ext_resource type="Texture2D" uid="uid://c1bsy51hfhbes" path="res://guys/mossman/animations/idle.png" id="4_xru1o"]
[ext_resource type="PackedScene" uid="uid://d2tgx3mm5fuh1" path="res://components/phys_enemy_react.tscn" id="7_o7xht"]
[ext_resource type="PackedScene" uid="uid://ypmo737lyg61" path="res://components/enemy_hurtbox.tscn" id="8_kcuar"]
[ext_resource type="PackedScene" uid="uid://whd3vtt5ud6y" path="res://components/item_dropper.tscn" id="9_cmnym"]
[ext_resource type="Script" uid="uid://c1y0eg0xypvhi" path="res://components/resources.gd" id="10_bt2hi"]
[ext_resource type="Texture2D" uid="uid://dj2dhd8v1h41e" path="res://guys/mossman/animations/die.png" id="11_4r2hn"]
[ext_resource type="PackedScene" uid="uid://cnridorhmcl1p" path="res://components/currency/rosary.tscn" id="11_v1dxl"]
[ext_resource type="PackedScene" uid="uid://cl8l2t1aij57u" path="res://components/currency/shard.tscn" id="12_2pwmk"]
[ext_resource type="Texture2D" uid="uid://64y70akpay62" path="res://guys/mossman/animations/attack.png" id="13_qgb1s"]
[ext_resource type="Texture2D" uid="uid://dx4bmen23frcm" path="res://guys/mossman/animations/sitting.png" id="14_dbkbw"]
[ext_resource type="Texture2D" uid="uid://bva0h8h0qb1i8" path="res://guys/mossman/animations/run.png" id="14_xru1o"]
[ext_resource type="Texture2D" uid="uid://bxcgc6tu21y4d" path="res://guys/mossman/animations/walk.png" id="15_poji3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0mss"]
size = Vector2(22, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8sd6"]
size = Vector2(40, 48)

[sub_resource type="Resource" id="Resource_jw1it"]
script = ExtResource("10_bt2hi")
item = ExtResource("11_v1dxl")
metadata/_custom_type_script = "uid://c1y0eg0xypvhi"

[sub_resource type="Resource" id="Resource_kftdo"]
script = ExtResource("10_bt2hi")
item = ExtResource("12_2pwmk")
metadata/_custom_type_script = "uid://c1y0eg0xypvhi"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0604"]
size = Vector2(32, 42)

[sub_resource type="Animation" id="Animation_qo4gh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_xru1o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l4e7f"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_qgb1s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.23333333, 0.33333334),
"transitions": PackedFloat32Array(1, 2.3784142, 1.464086, 1.8660663, 1.8660663),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_bhcl4"]
resource_name = "dead"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_4r2hn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1.8660663),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_dkbfa"]
resource_name = "recoil"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_4r2hn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_8nssb"]
resource_name = "run"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_xru1o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668),
"transitions": PackedFloat32Array(1, 2.3784142, 1.464086, 1.8660663, 1.8660663),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_xlihr"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_poji3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 2.3784142, 1.464086, 1.8660663, 1.8660663, 1.8660663),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_4r2hn"]
resource_name = "die"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_4r2hn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.2, 0.36666667, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_qgb1s"]
resource_name = "sitting"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_dbkbw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1.8660663),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hoawd"]
_data = {
&"RESET": SubResource("Animation_qo4gh"),
&"attack": SubResource("Animation_l4e7f"),
&"dead": SubResource("Animation_bhcl4"),
&"die": SubResource("Animation_4r2hn"),
&"recoil": SubResource("Animation_dkbfa"),
&"run": SubResource("Animation_8nssb"),
&"sitting": SubResource("Animation_qgb1s"),
&"walk": SubResource("Animation_xlihr")
}

[node name="Mossman" type="CharacterBody2D"]
script = ExtResource("1_fvd03")
metadata/isEnemy = true

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture_filter = 1
position = Vector2(4, -29)
scale = Vector2(2, 2)
texture = ExtResource("4_xru1o")

[node name="enemyColorMod" parent="Sprite2D" instance=ExtResource("3_ehjdp")]
position = Vector2(-2.5, 17)

[node name="world_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_x0mss")
debug_color = Color(0.5372549, 0.56078434, 0.25882354, 0.25882354)

[node name="playerSeekCast" type="RayCast2D" parent="."]
position = Vector2(0, -32)
target_position = Vector2(38, 0)

[node name="physEnemyReact" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("7_o7xht")]
enemy = NodePath("..")
animation = "recoil"

[node name="enemyHurtbox" parent="." node_paths=PackedStringArray("enemy", "enemyColorMod") instance=ExtResource("8_kcuar")]
position = Vector2(3, 24)
enemy = NodePath("..")
enemyColorMod = NodePath("../Sprite2D/enemyColorMod")

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyHurtbox"]
position = Vector2(-4, -48)
shape = SubResource("RectangleShape2D_c8sd6")
debug_color = Color(0.62941724, 0.45369422, 0.7251986, 0.41960785)

[node name="lootDropper" parent="." instance=ExtResource("9_cmnym")]
items = Dictionary[String, ExtResource("10_bt2hi")]({
"rosary": SubResource("Resource_jw1it"),
"shard": SubResource("Resource_kftdo")
})

[node name="enemyHitbox" type="Area2D" parent="."]
position = Vector2(5, 32)
metadata/isEnemyHitbox = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyHitbox"]
position = Vector2(-5, -53)
shape = SubResource("RectangleShape2D_q0604")
debug_color = Color(0.74607486, 0.32549092, 0.5559578, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hoawd")
}

[node name="platformCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(12, 17)
collision_mask = 2
